2007-03-20  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Set the __gtype_name__ on Column and ObjectTree

2007-03-19  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (Column): Mention the supported data types 
	in the doc string.

2007-03-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/listdialog.py (ListContainer): Add a return value
	to edit-item, inverse bool for remove-item.

	* examples/listdialog.py: New example

	* kiwi/ui/listdialog.py (ListDialog, ListContainer): 
	New dialog to implement 

	* kiwi/enums.py (ListType): new enum

	* kiwi/utils.py (quote): new function

2007-03-01  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py (ComboEntry.set_active_iter): 
	If object is None do not set the text of the entry

2007-02-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (ObjectList.__setitem__):
	Update the cache when replacing an object
	(ObjectList.__contains__): Use iters cache for consitency
	with index() and speed.

2007-02-22  Johan Dahlin  <jdahlin@async.com.br>

	* setup.py (ext_modules): Make sure that the pkgconfig file for
	pygtk-2.0 is installed before checking which version we have.

2007-02-21  Johan Dahlin  <jdahlin@async.com.br>

	Change the extensions of all ui tests to .doctest.
	
	* tests/ui/diary2.doctest: Add two assertion checks.

	* tests/test_ui.py (test_filename): Use subprocess instead of popen2

	* kiwi/ui/test/runner.py (Runner._iterate): Add support for
	checking the return value of a function.
	
2007-02-15  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py (DataTypeAdaptor.update): Set
	some sensible default data-types for the widgets

	* kiwi/ui/gazpacholoader.py (ModelProperty._on_widget__notify): 
	Track the name as the default model-attribute

	* kiwi/ui/proxy.py (Proxy._setup_widget): Do not require 
	model-attribute to be explicitly set. Use the widget name
	if it's not set.

2007-02-14  Johan Dahlin  <jdahlin@async.com.br>
